public/css/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.container {
    flex-direction: column;
    align-items: center;
    background-image: url("../images/background.png");
    background-position: center;
    background-size: cover;
    width: 100%;
    min-height: 100vh;
    padding: 5%;
    display: flex;
    justify-content: center;
}

header {
    background: rgb(112, 148, 214);
    padding: 10px;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

nav li {
    display: inline-block;
    margin-right: 20px;
}

nav a {
    text-decoration: none;
    color: #333;
}

nav a:hover {
    color: #e70808;
}

.Logo {
    margin-top: 33px;
    margin-bottom: 30px;
}

.searchbar {
    min-width: 550px;
    margin-bottom: 10px;
    width: 80%;
    max-width: 700px;
    background: mediumpurple;
    display: flex;
    align-items: center;
    border-radius: 60px;
    padding: 0px 20px;
    backdrop-filter: blur(4px) saturate(180%);
}

.searchbar input {
    background: transparent;
    flex: 1;
    border: 0;
    outline: none;
    padding: 24px 20px;
    font-size: 20px;
    color: white;
}

::placeholder {
    color: thistle;
}

.searchbar button img {
    width: 50px;
    border-radius: 50%;
}

.searchbar button:hover {
    background-color: black;
}

.searchbar button {
    border: 0;
    border-radius: 50%;
    width: 50px;
    height: 50px;
    background: navajowhite;
    cursor: pointer;
}

.customInput {
    min-width: 550px;
    /* max-width: 460px; */
    margin-bottom: 10px;
    width: 80%;
    max-width: 700px;
    background: mediumpurple;
    color: whitesmoke;
    display: flex;
    align-items: center;
    border-radius: 60px;
    padding: 10px 40px;
    backdrop-filter: blur(4px) saturate(180%);
}

.customInput input {
    height: 30px;
    width: 500px;
}

.customBtn {
    background-color: mediumpurple;
    border-color: white(0, 0, 0);
    border-radius: 40%;
    padding: 5px 10px;
    font-size: 15px;
    color: white;
    margin-bottom: 10px;
}

.og_link {
    padding-left: 10px;
    background-color: mediumpurple;
    border: black;
    float: left;
    min-width: 200px;
    width: 420px;
    margin-bottom: 2px;
    color: whitesmoke;
}

.created_msg {
    height: 0;
    background-color: mediumpurple;
    display: flex;
    overflow: hidden;
    color: whitesmoke;
    width: 420px;
}

.created_link {
    margin-left: 10px;
    float: right;
}

.created_msg img {
    width: 50px;
    border-radius: 50%;
}

